--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "homepage": "https://github.com/vhm205/message-app#readme",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-ejs-extend": "^0.0.1",
     "mongoose": "^5.8.4"
   },
   "devDependencies": {
