--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "1.7.0"
+    "babel-preset-env": "1.7.0",
+    "dotenv": "^8.2.0"
   }
 }
