--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-ejs-extend": "^0.0.1",
+    "express-validator": "^6.3.1",
     "mongoose": "^5.8.4"
   },
   "devDependencies": {
