--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.3.1",
     "mongoose": "^5.8.4",
+    "nodemailer": "^6.4.2",
     "uuid": "3.3.2"
   },
   "devDependencies": {
