--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "express-validator": "^6.3.1",
     "mongoose": "^5.8.4",
     "nodemailer": "^6.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "uuid": "3.3.2"
   },
   "devDependencies": {
