--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "mongoose": "^5.8.4",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "uuid": "3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "1.7.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "pem": "^1.14.4"
   }
 }
