--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "express-ejs-extend": "^0.0.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.3.1",
+    "fs-extra": "^8.1.0",
     "mongoose": "^5.8.4",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
