--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.3.1",
     "fs-extra": "^8.1.0",
+    "lodash": "^4.17.15",
     "mongoose": "^5.8.4",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.2",
