--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bluebird": "^3.7.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-ejs-extend": "^0.0.1",
@@ -39,6 +40,8 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
+    "socket.io": "^2.3.0",
     "uuid": "3.3.2"
   },
   "devDependencies": {
