--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "babel-node ./src/server.js",
-    "dev": "nodemon ./src/server.js",
-    "debug": "nodemon ./src/server.js --inspect",
+    "dev": "babel ./src/server.js -w -o app-complied.js",
+    "debug": "babel-node --inspect ./src/server.js",
     "build": "babel index.js -d ES5"
   },
   "repository": {
