--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/vhm205/message-app#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.7",
     "bluebird": "^3.7.2",
     "connect-flash": "^0.1.1",
@@ -42,6 +43,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
+    "request": "^2.88.2",
     "socket.io": "^2.3.0",
     "uuid": "3.3.2"
   },
