--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ node_modules/
 _config.yml
 .swp
 
-sh/env.sh
-sh/env_win.sh
+**/env*
 
 src/public/libraries/bower_components
 src/public/libraries/emojione
